nicer animation for buttons, and also fixes them on mobile

--- a/main.scss
+++ b/main.scss
@@ -111,7 +111,7 @@ body {
 .wrap__hasBackground {
   .bg {
     opacity: 1;
-    transform: scale(1);
+    transform: scale(1.3);
   }
 }
 
